fixed cards overlaping

--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
     margin: 10px auto;
 }
 
-/* #card-container {
+#cards-container {
+    padding-left: 451.69px;
+}
 
-} */
 #card-title {
     text-align: center;
     margin-bottom: 0%;
